Version 0.10.3 (2010/11/12)

  * cvblob.cpp, cvblob.h: new function "cvSaveImageBlob".

  * cvblob.cpp: fixes in "cvRenderBlobs" function.

Version 0.10.2 (2010/06/07)

  * cvblob.cpp, cvblob.h: new function "cvFilterByLabel".

  * cvcontour.cpp, cvblob.h: new function: cvContourChainCodePerimeter. Thanks
  to meonimarco.

  * cvlabel.cpp: fixed wrong background in cvFilterLabels. Thanks to
  mathias.ferraton.

  * cvblob.cpp, ...: fixed some compilation warnings.

  * cvcontour.cpp: some asserts deleted and/or fixed.

  * test_random.cpp: test improved.

Version 0.10.1 (2010/04/19)

  * cvcontour.cpp: "cvWriteContourPolygonCSV" function.

  * cvblob.h: new function cvReleaseBlob. Fixed memory leak in
  "cvReleaseBlobs".
  
  * cvblob.cpp: Fixed memory leak in "cvFilterByArea".

Version 0.10.0 (2010/03/18)

  * cvlabel.cpp: new labeling algorithm.

  * cvcontour.cpp: "cvGetContour" function deleted (this functionality is
  doing now by "cvLabel").

  * cvcolor.cpp: new file. Function: "cvBlobMeanColor".

  * cvblob.cpp: new function "cvRenderBlob". Fixed bug in "cvRenderBlobs" (now
  uses "cvRenderBlob").

  * cvaux.cpp: bug fixed (change "abs" for "fabs"). Thanks, sircoko.

Version 0.9.14 (2010/03/10)

  * cvlabel.cpp, cvblob.h: function "cvGetLabel".

  * Makefile, red_object_tracking.cpp: sample program.

Version 0.9.13 (2010/01/01)

  * several files: namespace "cvb".

  * cvblob.h, cvcontour.cpp: function to write contour to a SVG file.

  * cvblob.h, cvtrack.cpp: tracking algorithm rewritten and new mode for
  render tracks.

Version 0.9.12 (2009/12/01)

  * cvaux.cpp: new file. Auxiliar functions.

  * cvcontour.cpp: bug fixed in cvConvertChainCodesToPolygon. Problem with
  blobs of one pixel. New functions.

  * cvtrack.cpp: memory leak fixed in cvRenderTracks.

  * cvblob.h: doxygen documentation. New functions.

Version 0.9.11 (2009/10/01)

  * cvblob.cpp, cvlabel.cpp, cvtracker.cpp, cvcontour.cpp: error handling
  OpenCV's style.
